bencthc/src/utils/organization/backus-naurFormGrammar.txt
<program> ::= <function> <comment>*

//scope reduction from program to function//
<function> ::= "INT" "IDENTIFIER" "LEFT_PAREN" "RIGHT_PAREN" "LEFT_BRACE" <statement>* <returnStatement> "RIGHT_BRACE"

<statement> ::= <returnStatement> | <exprStatement> | <declarationStatement> | <assignmentStatement> | <comment>
<returnStatement> ::= "RETURN" <expr> "SEMICOLON" <comment>?
<exprStatement> ::= <expr> "SEMICOLON" <comment>?
<declarationStatement> ::= "INT" "IDENTIFIER" ("=" <expr>)? "SEMICOLON" <comment>?
<assignmentStatement> ::= "IDENTIFIER" "=" <expr> "SEMICOLON" <comment>?
<comment> = "//" anything

<expr> ::= <addition>

<addition> ::= <multiplication> ( ("+" | "-") <multiplication> )*
<multiplication> ::= <unary> ( ("*" | "/") <unary> )*

<unary> ::= "-" <unary> | <primary>

<primary> ::= "INTEGER" | "IDENTIFIER" | "(" <expr> ")"
